--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "inertiajs/inertia-laravel": "^1.0",
-        "laravel/sanctum": "^4.0"
+        "laravel/sanctum": "^4.0",
+        "tightenco/ziggy": "^2.2"
     },
     "minimum-stability": "dev",
     "autoload": {
@@ -33,5 +34,5 @@
             ]
         }
     },
-    "version": "0.0.12"
+    "version": "0.0.13"
 }
