--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.13",
         "postcss": "^8.4.38",
-        "vue": "^3.4.29"
+        "vue": "^3.4.29",
+        "autoprefixer": "^10.4.19"
     }
 }
