--- a/src/package.json
+++ b/src/package.json
@@ -22,7 +22,6 @@
         "vuex-persistedstate": "^4.1.0",
         "primeicons": "^7.0.0",
         "primevue": "^3.52.0",
-        "sweetalert2": "^11.12.2",
-        "js-cookie": "^3.0.5"
+        "sweetalert2": "^11.12.2"
     }
 }
